# Minecraft

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  core.h
src/application/: application.cpp  application.h  global_status.h
src/application/chunk/: Chunk.cpp  Chunk.h
src/application/skybox/: skybox.cpp  skybox.h
src/application/task/: render_task.hpp  task.hpp
src/application/user_interface/: user_interface.cpp  user_interface.h
src/application/world/: world.cpp  world.h
src/assets/shader/: fragment.glsl  fragment_ui.glsl  fragment_world.glsl  vertex.glsl  vertex_skybox.glsl  vertex_ui.glsl  vertex_world.glsl
src/assets/shader/skybox/: fragment_skybox.glsl
src/assets/shader/ui/: fragment_ui.glsl  vertex_ui.glsl
src/assets/shader/water/: fragment_water.glsl  vertex_water.glsl
src/assets/shader/world/: fragment_world.glsl  vertex_world.glsl
src/framework/: framework.cpp  framework.h
src/framework/camera/: camera.cpp  camera.h
src/framework/shader/: shader.cpp  shader.h
src/framework/texture/: Texture2D.cpp  Texture2D.h  texture.cpp  texture.h  textureCube.cpp  textureCube.h
src/utils/: utils.cpp  utils.h
